[tool.poetry]
name = "fastapi-lms"
version = "0.1.0"
description = ""
authors = ["Aniruddha Kibey <aniruddha.kibey@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_lms"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.19.0"
fastapi = "^0.85.1"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
